// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildRouteHandlers > from 1 route 1`] = `
{
  "modules": [],
  "route": {
    "mod": [],
    "path": "/",
  },
  "test": {
    "keys": [],
    "pattern": /\\^\\(\\?=\\$\\|\\\\/\\)/i,
  },
}
`;

exports[`buildRouteHandlers > from 2 routes 1`] = `
{
  "modules": [],
  "route": {
    "mod": [],
    "path": "/",
    "tree": [
      {
        "mod": [],
        "path": "/abc",
      },
    ],
  },
  "test": {
    "keys": [],
    "pattern": /\\^\\(\\?=\\$\\|\\\\/\\)/i,
  },
  "tree": [
    {
      "modules": [],
      "route": {
        "mod": [],
        "path": "/abc",
      },
      "test": {
        "keys": [],
        "pattern": /\\^\\\\/abc\\(\\?=\\$\\|\\\\/\\)/i,
      },
    },
  ],
}
`;
